manifest/hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: demo.localdev.me
      http:
        paths:
          - backend:
              service:
                name: hello-world-svc
                port:
                  number: 8080
            path: /hello
            pathType: Prefix
